[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/images/background.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/home.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/base_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://assets/images/ui/reload.png" type="Texture" id=6]
[ext_resource path="res://assets/font/Overpass-Regular_40.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/images/ui/trophee.png" type="Texture" id=8]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 10 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="TextureRect"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 12, 4, 0, 65536, 2, 0, 65548, 4, 0, 131072, 2, 0, 131084, 4, 0, 196608, 2, 0, 196620, 4, 0, 262144, 2, 0, 262156, 4, 0, 327680, 2, 0, 327692, 4, 0, 393216, 2, 0, 393228, 4, 0, 458752, 2, 0, 458764, 4, 0, 524288, 2, 0, 524300, 4, 0, 589824, 2, 0, 589836, 4, 0, 655360, 2, 0, 655372, 4, 0, 720896, 2, 0, 720908, 4, 0, 786432, 2, 0, 786444, 4, 0, 851968, 2, 0, 851980, 4, 0, 917504, 2, 0, 917516, 4, 0, 983040, 2, 0, 983052, 4, 0, 1048576, 2, 0, 1048588, 4, 0, 1114112, 2, 0, 1114124, 4, 0, 1179648, 2, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 4, 0 )

[node name="Control" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -85.0
margin_bottom = -85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Node2D" parent="Control"]

[node name="Player" parent="Control" instance=ExtResource( 10 )]
position = Vector2( 96, 15 )

[node name="SpawnTimer" type="Timer" parent="Control"]

[node name="AreaJump" type="Area2D" parent="Control"]
position = Vector2( 96, 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/AreaJump"]
shape = SubResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "TITLE_SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -116.0
margin_right = 176.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="Name"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 19.0
margin_right = 72.0
margin_bottom = 67.0
rect_min_size = Vector2( 192, 48 )
max_length = 16
clear_button_enabled = true
placeholder_text = "ENTRY_PSEUDO"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameButton" type="Button" parent="Name"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 72.0
margin_top = 19.0
margin_right = 120.0
margin_bottom = 67.0
rect_min_size = Vector2( 48, 48 )
text = "BUTTON_OK"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
visible = false
margin_left = 48.0
margin_top = 320.0
margin_right = 368.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 60.0
margin_right = 120.0
margin_bottom = 54.0
rect_min_size = Vector2( 60, 54 )
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true

[node name="HighscoreButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 200.0
margin_right = 260.0
margin_bottom = 54.0
rect_min_size = Vector2( 60, 54 )
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTransition" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="timeout" from="Control/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Control/AreaJump" to="." method="_on_AreaJump_body_entered"]
[connection signal="gui_input" from="Name/NameEdit" to="." method="_on_NameEdit_gui_input"]
[connection signal="pressed" from="Name/NameButton" to="." method="_on_NameButton_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/HighscoreButton" to="." method="_on_HighscoreButton_pressed"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
